feat: Add healthz endpoint and regenerate Shopify and website worker build assets.

--- a/apps/website/src/pages/index.astro
+++ b/apps/website/src/pages/index.astro
@@ -23,7 +23,7 @@ const moduleName = 'APEX';
   <div class="header">Header</div>
   <div class="sidebar">Left Sidebar</div>
   <div class="main">
-    <div class="title">This is Cloudcache <span style="color:#FF0000;">{mode}</span> <span style="color:#000000;">{moduleName}</span></div>
+    <div class="title">I love Cloudcache</div>
   </div>
   <div class="footer">Footer</div>
 </body>
