chore: Update build artifacts and reformat generated server code.

--- a/apps/web/src/components/Title.astro
+++ b/apps/web/src/components/Title.astro
@@ -1,8 +1,5 @@
----
----
 <div class="title-container">
-  <span class="red-text">This is Cloudcache Shopapp </span>
-  <span class="black-text">Preview</span>
+  <span class="blue-text">I love Cloudflare (web)</span>
 </div>
 
 <style>
@@ -13,10 +10,7 @@
     height: 100%;
     font-size: 30px;
   }
-  .red-text {
-    color: red;
-  }
-  .black-text {
-    color: black;
+  .blue-text {
+    color: blue;
   }
 </style>
